Fixed bugs in routine formation + blocks + drag
Added some toasts as well

--- a/src/app/block-component/block-component.component.html
+++ b/src/app/block-component/block-component.component.html
@@ -21,10 +21,10 @@
     <ion-col class="center" id="num">
       <ion-text>{{i}}</ion-text>
     </ion-col>
-    <ion-col size="auto" class=grid-cell
-      *ngFor="let block of row;">
+    <ion-col size="auto" class=grid-cell id="block"
+      *ngFor="let block of row; let j = index">
       <ion-item-group class="group_obj" draggable="true"
-      (dragend)="dragFuncion($event, undefined, block, true)">
+      (dragend)="dragFuncion($event, undefined, block, true)" *ngIf="j==0" (click)="openPopUp(block, $event)">
         <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+block.get_color()+')', 'float':'left', 'margin-top': '-14px', 'margin-left':'9px'}"></ion-icon>
         <div [ngClass]="{'red': block.get_color() === 'danger', 'yellow' : block.get_color() === 'warning', 'green' : block.get_color() === 'success', 'medium' : block.get_color() === 'medium' }">
           <div id="text"
@@ -35,6 +35,26 @@
         <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '34px!important', 'fill': 'var(--ion-color-'+block.get_color()+')', 'margin-top':'-6px', 'width':'10px', 'stroke':'none', 'float':'left'}"></ion-icon>
         <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'14px', 'width':'30px', 'fill': 'var(--ion-color-'+block.get_color()+')', 'float':'left', 'margin-left':'-2px'}"></ion-icon>
         <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '1px!important', 'fill': 'var(--ion-color-'+block.get_color()+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'float':'left'}"></ion-icon>
+      </ion-item-group>
+      <ion-item-group class="group_obj" draggable="true"
+      (dragend)="dragFuncion($event, undefined, block, true)" *ngIf="j!=0" (click)="openPopUp(block, $event)">
+        <ion-grid [ngStyle]="{'margin-left':'-15px', 'padding':'0', 'margin-right':'-5px', 'padding-top':'5px', 'margin-bottom':'-3px'}">
+          <ion-row>
+            <ion-col [ngStyle]="{'pading':'0', 'margin-right':'-10px'}">
+              <ion-icon src="../../assets/semi_rotate_2.svg" [ngStyle]="{'fill': 'var(--ion-color-'+current_routine.array_block[i][j-1].get_color()+')', 'background-color': 'var(--ion-color-'+current_routine.array_block[i][j].get_color()+')', 'float':'left', 'width':'15px', 'height':'30px'}"></ion-icon>
+              <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'fill': 'var(--ion-color-'+block.get_color()+')', 'width':'calc(100%)', 'stroke':'var(--ion-color-'+block.get_color()+')'}"></ion-icon>
+            </ion-col>
+            <ion-col [ngStyle]="{'pading':'0'}">
+              <div [ngClass]="{'red_2': block.get_color() === 'danger', 'yellow_2' : block.get_color() === 'warning', 'green_2' : block.get_color() === 'success', 'medium_2' : block.get_color() === 'medium'}">
+                <div id="text"
+                size="small">
+                <ion-label>{{ block.name }}</ion-label>
+                </div>
+              </div>
+              <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+block.get_color()+')', 'width':'calc(100% + 14px)', 'stroke':'none', 'margin-top':'-14px', 'margin-left':'-14px'}"></ion-icon>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item-group>
     </ion-col>
   </ion-row>
@@ -51,5 +71,19 @@
   </ion-row>
   
   </ion-grid>
+
+  <ion-toast
+    [isOpen]="isToastOpenClass"
+    message="You can't add that block at this time (there's already a block of the same type)."
+    [duration]="3000"
+    (didDismiss)="setOpenClass(false)"
+  ></ion-toast>
+
+  <ion-toast
+    [isOpen]="isToastOpenRoutine"
+    message="Routines blocks have to be alone at any time."
+    [duration]="2000"
+    (didDismiss)="setOpenRoutine(false)"
+  ></ion-toast>
 
 </ion-content>
