--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,19 @@
         <app-sidebar-accordeon></app-sidebar-accordeon>
       </ion-content>
       <ion-content contentId="right-content" class="third">
-        <app-block-component></app-block-component>
+        <ion-header>
+          <ion-toolbar class="small-toolbar">
+            <ion-title></ion-title>
+          </ion-toolbar>
+        </ion-header>
+        <div #botonesContainer class="botones-container"></div>
+        <app-block-component *ngIf="mostrarBloque"></app-block-component>
       </ion-content>
     </ion-split-pane>
   
   <ion-button size="large" color="medium" class="clear" (click)="clearRoutine()">NEW</ion-button>
   <ion-button size="large" color="success" class="save" (click)="saveRoutine()">SAVE</ion-button>
+  <ion-button size="large" color="secondary" class= "tabs" (click)="agregarTabAlContainer()">New Tab</ion-button>
 </ion-app>
 
 
