--- a/src/app/block-component/block-component.component.scss
+++ b/src/app/block-component/block-component.component.scss
@@ -26,3 +26,7 @@ $colors: (
   padding: 10px; /* Add padding for spacing */
   text-align: center; /* Center text within cells */
 }
+
+.my-button{
+  border-bottom: none;
+}
