--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 
   <ion-button  (click)="eliminarBoton()" class="my-button" size="small" color="light" >
-    Tab 
+     <ion-label id="tabID">New Routine</ion-label> 
     <ion-icon  slot="end"name="close-circle-outline" ></ion-icon>
   </ion-button>
 
