Add switch view buttons, scroll refreshed, and delete updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,13 @@
         <app-sidebar-accordeon></app-sidebar-accordeon>
       </ion-content>
       <ion-content contentId="right-content" class="third">
-        <div #botonesContainer class="botones-container"></div>
-        <app-block-component></app-block-component>
+        <ion-grid>
+          <ion-row>
+            <ion-col><div #botonesContainer class="botones-container"></div></ion-col>
+            <ion-col class="ion-text-right" size="auto"><ion-button (click)="Switch_View()">Switch To<br>YAML View</ion-button></ion-col>
+          </ion-row>          
+        </ion-grid>
+        <app-block-component *ngIf="block_view"></app-block-component>
       </ion-content>
     </ion-split-pane>
   
