* Se agrego un tab inmediamente al crear la vista y se le asigno un nombre default al tab. * Se hizo clickable solo el icono para cerrar el tab. * Se movio la logica de borrar la rutina actual al hacer click en el boton para cerrar el tab.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,14 +13,16 @@
         <app-sidebar-accordeon></app-sidebar-accordeon>
       </ion-content>
       <ion-content contentId="right-content" class="third">
-        <div #botonesContainer class="botones-container"></div>
+        <div class="tabs-container">
+          <div #botonesContainer class="botones-container"></div>
+        </div>
         <app-block-component></app-block-component>
       </ion-content>
     </ion-split-pane>
   
-  <ion-button size="large" color="medium" class="clear" (click)="clearRoutine()">NEW</ion-button>
+  <ion-button size="large" color="medium" class="clear" (click)="onNewPressed()">NEW</ion-button>
   <ion-button size="large" color="success" class="save" (click)="saveRoutine()">SAVE</ion-button>
-  <ion-button size="large" color="secondary" class= "tabs" (click)="agregarTabAlContainer()">New Tab</ion-button>
+  <!-- <ion-button size="large" color="secondary" class= "tabs" (click)="agregarTabAlContainer()">New Tab</ion-button> -->
 </ion-app>
 
 
