--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,7 +1,7 @@
 
-  <ion-button  (click)="eliminarBoton()" class="my-button" size="small" color="light" >
+  <ion-item class="my-button" size="small" color="light" >
      <ion-label id="tabID">New Routine</ion-label> 
-    <ion-icon  slot="end"name="close-circle-outline" ></ion-icon>
-  </ion-button>
+    <ion-icon (click)="eliminarBoton()" class="my-icon-close" slot="end"name="close-circle-outline" ></ion-icon>
+  </ion-item>
 
 
