--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -9,10 +9,16 @@
   --border-width: 0;
   border-bottom: none !important;
   color: black;
+  width: fit-content;
+  border-radius: 10px;
 }
 
-.icon-cerrar {
-  
+.my-icon-close {
+  color: red;
+}
+
+.my-icon-close:hover {
+  color: #ff00007e;
 }
 
 ion-label {
