Combine button with text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
           </ion-row>          
         </ion-grid>
         <app-block-component *ngIf="block_view"></app-block-component>
+        <ion-text *ngIf="!block_view">{{text}}</ion-text>
       </ion-content>
     </ion-split-pane>
   
