Right click on a routine, to see available options and click on modify to open a new tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </ion-content> -->
       <!-- AQUI COMIENZA EL AREA DE RUTINA -->
       <ion-content contentId="left-content" class="first" color="light">
-        <app-sidebar-accordeon></app-sidebar-accordeon>
+        <app-sidebar-accordeon (agregarTabEvent)="agregarTabAlContainer()"></app-sidebar-accordeon>
       </ion-content>
       <ion-content contentId="right-content" class="third">
         <div class="tabs-container">
