--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -165,6 +165,7 @@
       <ion-list>
         <ion-item [button]="true" [detail]="false" (click) = "delete_routine($event)">Delete</ion-item>
         <ion-item [button]="true" [detail]="false" (click) = "download_routine($event)">Download</ion-item>
+        <ion-item [button]="true" [detail]="false" (click)="onModifyClick()">Modify</ion-item>
       </ion-list>
     </ion-content>
   </ng-template>
