Remove shadow in button

--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.scss
@@ -95,4 +95,7 @@
 
   .button{
     margin: -10px;
+    border-color: none !important; 
+    border-width: 0px !important;
+    --box-shadow: none !important;
   }
