When double clicking on a routine block open a new tab

--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -132,7 +132,7 @@
     <!--Inside of the routines accordeon-->
     <div slot="content">
       <ion-list class="my-componente2">
-        <div *ngFor="let item of routines_blocks; let index" 
+        <div *ngFor="let item of routines_blocks; let i= index" (dblclick)="onDoubleClick($event, i)"
           draggable="true"
           (dragend)="onDragEnd($event, item)"
           title="{{ item.description }}"
