--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -1,5 +1,5 @@
 <ion-content #full [scrollEvents]="true" (ionScroll)="handleScroll($any($event))">
-  <ion-accordion-group [multiple]="true" #listenerbig >
+  <ion-accordion-group [multiple]="true" #listenerbig> <!--(ionChange)="accordionGroupChange($event)"-->
     <ion-accordion value="NonVerbal">
       <ion-item slot="header" color="primary">
         <ion-icon name="mic-off-outline" slot="start"></ion-icon>
@@ -55,11 +55,11 @@
                   <div class="square green">
                     <div id="text"
                     size="small">
-                    <ion-label>{{ item.label }}</ion-label>
+                    <ion-button class="button" color="{{item.color}}">{{ item.label }}</ion-button>
                     </div>
                   </div>
                   <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'width':'10px', 'stroke':'none', 'float':'left'}"></ion-icon>
-                  <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px'}"></ion-icon>
+                  <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px', 'margin-top':'-1px'}"></ion-icon>
                   <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'margin-bottom':'20px'}"></ion-icon>
                   <br>
                 </div>
@@ -85,11 +85,11 @@
             <div class="square yellow">
               <div id="text"
               size="small">
-              <ion-label>{{ talk.label }}</ion-label>
+              <ion-button class="button" color="{{talk.color}}">{{ talk.label }}</ion-button>
               </div>
             </div>
             <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+talk.color+')', 'margin-top':'-6px', 'width':'10px', 'stroke':'none', 'float':'left'}"></ion-icon>
-            <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+talk.color+')', 'float':'left', 'margin-left':'-2px'}"></ion-icon>
+            <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+talk.color+')', 'float':'left', 'margin-left':'-2px', 'margin-top':'-1px'}"></ion-icon>
             <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+talk.color+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'margin-bottom':'20px'}"></ion-icon>
             <br>
           </div>
@@ -111,11 +111,11 @@
                   <div class="square yellow">
                     <div id="text"
                     size="small">
-                    <ion-label>{{ item.label }}</ion-label>
+                    <ion-button class="button" color="{{item.color}}">{{ item.label }}</ion-button>
                     </div>
                   </div>
                   <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'width':'10px', 'stroke':'none', 'float':'left'}"></ion-icon>
-                  <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px'}"></ion-icon>
+                  <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px', 'margin-top':'-1px'}"></ion-icon>
                   <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'margin-bottom':'20px'}"></ion-icon>
                   <br>
                 </div>
@@ -133,21 +133,23 @@
       <!--Inside of the routines accordeon-->
       <div slot="content">
         <ion-list class="my-componente2">
-          <ion-item-group *ngFor="let item of routines_blocks; let index" 
+          <ion-item-group *ngFor="let item of routines_blocks; index as i" 
             draggable="true"
+            (dragstart)="onDragStart($event, item, i)"
             (dragend)="onDragEnd($event, item)"
             title="{{ item.description }}"
             class="list_puzzle"
-            (contextmenu)="openPopover(item.color, $event, item)">
+            (contextmenu)="openPopover(item.color, $event, item)"
+            id="block_{{i}}">
             <ion-icon src="../../assets/semi_cropped.svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-top': '-2px', 'margin-left':'10px'}"></ion-icon>
               <div class="square medium">
                 <div id="text"
                 size="small">
-                <ion-label>{{ item.label }}</ion-label>
+                <ion-button class="button" color="{{item.color}}">{{ item.label }}</ion-button>
                 </div>
               </div>
               <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'width':'10px', 'stroke':'none', 'float':'left'}"></ion-icon>
-              <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px'}"></ion-icon>
+              <ion-icon src="../../assets/anti_semi(1).svg" [ngStyle]="{'height':'15px', 'width':'30px', 'fill': 'var(--ion-color-'+item.color+')', 'float':'left', 'margin-left':'-2px', 'margin-top':'-1px'}"></ion-icon>
               <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+item.color+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'margin-bottom':'20px'}"></ion-icon>
               <br>
             </ion-item-group>
