--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <ion-content contentId="right-content" class="third">
         <ion-grid>
           <ion-row>
-            <ion-col><div #botonesContainer class="botones-container"></div></ion-col>
+            <ion-col class="col"><div #botonesContainer class="botones-container"></div></ion-col>
             <ion-col class="ion-text-right" size="auto"><ion-button (click)="Switch_View()">Switch To<br>YAML View</ion-button></ion-col>
           </ion-row>          
         </ion-grid>
