--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,6 +66,13 @@ app-sidebar-second {
 }
 
 .tabs-container {
+  //display: flex;
+  //flex-wrap: nowrap;
+  //overflow-x: auto; /* Agrega desplazamiento horizontal si los elementos desbordan */
+}
+
+.col{
+  //border: 1px solid;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto; /* Agrega desplazamiento horizontal si los elementos desbordan */
