Added the double click

--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -133,7 +133,7 @@
       <!--Inside of the routines accordeon-->
       <div slot="content">
         <ion-list class="my-componente2"> <!--(dragstart)="onDragStart($event, item, i)"-->
-          <ion-item-group *ngFor="let item of routines_blocks; index as i" 
+          <ion-item-group *ngFor="let item of routines_blocks; index as i" (dblclick)="onDoubleClick($event, i)" 
             draggable="true"
             (dragend)="onDragEnd($event, item)"
             title="{{ item.description }}"
