--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="ion-text-center" *ngSwitchCase="'speech'">
-      <ion-text>¿What you like your robot to say?</ion-text>
+      <ion-text>¿What would you like your robot to say?</ion-text>
       <ion-input placeholder="Text Here" [(ngModel)]="talk"></ion-input>
     </div>
     
@@ -26,6 +26,17 @@
       ERROR
     </div>
 
+      <ion-list class="my_select" *ngSwitchCase="'speech'">
+        <ion-item>
+          <ion-select aria-label="fruit" placeholder="Tone of voice">
+            <ion-select-option value="Angry">Angry</ion-select-option>
+            <ion-select-option value="Happy">Happy</ion-select-option>
+            <ion-select-option value="Sad">Sad</ion-select-option>
+            <ion-select-option value="Screaming">Screaming</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+   
     <ion-button class="button_save" colors="success" (click)="save()">Save Changes</ion-button>
 
 </ion-content>
