--- a/src/app/sidebar-accordeon/sidebar-accordeon.component.html
+++ b/src/app/sidebar-accordeon/sidebar-accordeon.component.html
@@ -94,7 +94,7 @@
           <ion-icon src="../../assets/square-filled-geometric-shape-svgrepo-com.svg" [ngStyle]="{'height': '30px!important', 'fill': 'var(--ion-color-'+talk.color+')', 'margin-top':'-6px', 'margin-left':'-2px', 'width':'calc(100% - 40px + 4px)', 'stroke':'none', 'margin-bottom':'20px'}"></ion-icon>
           <br>
         </div>
-        <!-- SEGUNDO POPOVER -->
+        <!-- SEGUNDO POPOVER 
         <ion-popover #popoversecond [isOpen]="isOpenTwo" (didDismiss)="isOpenTwo = false" triggerAction="context-menu">
           <ng-template>
             <ion-content>
@@ -106,7 +106,7 @@
             </ion-content>
           </ng-template>
         </ion-popover>
-        <!-- FIN DEL SEGUNDO POPOVER -->
+        FIN DEL SEGUNDO POPOVER -->
         <ion-accordion value="sounds">
           <ion-item slot="header" color="light">
             <ion-icon aria-hidden="true" name="volume-high-outline" slot="start"></ion-icon>
